--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -510,14 +510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ANDRES CUELLAR\\AppData\\Local\\Temp\\ipykernel_12396\\1754729390.py:18: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\ANDRES CUELLAR\\AppData\\Local\\Temp\\ipykernel_19176\\1754729390.py:18: RuntimeWarning: divide by zero encountered in log\n",
       "  wb_values = (n * p2 * vgorrito) * np.log(p1_values / p2)\n"
      ]
     },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -627,13 +627,13 @@
        "\n",
        "$$P_1V_1 = mRT_1$$\n",
        "$$m = \\frac{P_1V_1}{RT_1} =\\frac{(6 bar)(0.05 m^3)}{(0.2968 \\frac {kJ}{kg*°K})(450 °K)} (\\frac{100KPas}{1bar})$$\n",
-       "$$m = 0.225kg$$\n",
+       "$$m = 0.22kg$$\n",
        "\n",
        "C) Luego, se calcula la $T_2$ de la siguiente manera.\n",
        "\n",
        "$$P_2V_2 = mRT_2$$\n",
-       "$$T_2 = \\frac {P_2V_2}{mR} = \\frac{(1.5 bar)(0.1 m^3)}{(0.225kg)(0.2968 \\frac{kJ}{kg*°K})}(\\frac{100kPas}{1bar})$$\n",
-       "$$T_2=224.618°K$$\n",
+       "$$T_2 = \\frac {P_2V_2}{mR} = \\frac{(1.5 bar)(0.1 m^3)}{(0.22kg)(0.2968 \\frac{kJ}{kg*°K})}(\\frac{100kPas}{1bar})$$\n",
+       "$$T_2=229.72°K$$\n",
        "\n",
        "Ya habiendo hallado todos los datos necesario se pueden responder las incognitas inicales.\n",
        "\n",
@@ -657,7 +657,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,6 +1013,56 @@
     "\n",
     "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla9.png?raw=true\" style=\"width: 700px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 12.5 Conteo De Partes\n",
+    "Los  típicos estudios QRA solo lidian con los casos de perdidad de contención o \"Loss of Containetn (LOC)\" asumiendo que los demás precesos son molestos, como el escape térmico y las evaluaciones de peligros reactivos están cubiertos de estudios de seguridad como: el HAZID, HAZOP,FMECA. Aunque no es del todo correcto, los analisis LOC requieren de la identificación de todas las fuentes de liberación, el calculo de la liberación, la definición de las frecuencias y la combinación de todos los datos.\n",
+    "\n",
+    "#### 12.5.1 Modelos de Liberación QRA\n",
+    "\n",
+    "* Liberación de gases\n",
+    "La siguiente formula simplificada para la liberación inicial de los gases está basada en la asunción $\\gamma = 1.31 $ y $C_D = 0.85$\n",
+    "\n",
+    "$$W_g = 1.4 *10^{-4}*D^2_e \\cdot \\sqrt{\\rho _g \\cdot P_g } $$\n",
+    "\n",
+    "Donde:\n",
+    "- $W_g$ es la proporción del flujo inicial de masa (kg/s).\n",
+    "- $D_e$ es el diametro del hueco (mm).\n",
+    "- $\\rho _g$ es la densidad inical del gas ($kg/m^3 $).\n",
+    "- $P_g$ es la presión inicial (barg).\n",
+    "\n",
+    "* Liberación de liquido\n",
+    "La siguiente formula simplificada para la liberación inicial de los liquidos está basada en la asunción de que $C_D =0.61$ y que la cabeza estática se puede obviar:\n",
+    "\n",
+    "$$W_{L} = 2.1 * 10^{-4}*D_e^2 \\cdot \\sqrt{\\rho _L \\cdot P_L } $$\n",
+    "\n",
+    "Donde:\n",
+    "- $W_l$ es la proporción del flujo inicial de masa (kg/s).\n",
+    "- $D_e$ es el diametro del hueco (mm).\n",
+    "- $\\rho _L$ es la densidad inical del liquido ($kg/m^3 $).\n",
+    "- $P_L$ es la presión inicial (barg).\n",
+    "\n",
+    "* Liberación de dos fases\n",
+    "La siguiente formula simplificada para la liberación inicial de los liquidos está basada en la asunción de que $C_D =0.61$ y que la cabeza estática se puede obviar:\n",
+    "\n",
+    "$$ W_{gL}= \\frac{GOR}{GOR + 1}W_g + \\frac{1}{GOR + 1}W_L$$\n",
+    "\n",
+    "Donde: \n",
+    "- $W_{gL}$ es la proporción del flujo inicial de masa (kg/s).\n",
+    "- GOR es la proporción de gas a aceite (kg de gas/kg de liquido).\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 12.5.2 Análisis transitorio"
    ]
   }
  ],
