--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
     "- $W_B$ es la tasa de flujo de masa cuando el desahogo empieza.\n",
     "\n",
     "\n",
-    "<img src=\"Tabla10\" style=\"width: 500px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"Tabla10.png\" style=\"width: 500px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
     "- $W_T$ es la tasa de flujo total de masa cuando comienza el desahogo desde la válvula de BD y desde la fuga.\n",
     "- $t_I$ es el momento en que comienza la fuga (s)\n",
@@ -1091,7 +1091,7 @@
     "\n",
     "$$ R_E = W_o \\cdot t_I + I \\cdot (1 - \\frac{W_B}{W_o}) + M_B \\cdot \\frac{W_B}{W_T} $$\n",
     "\n",
-    "$$ W_B = W_o \\cdot exp \\frac{- W_o \\cdot (t_B - t_I)}{I} $$\n",
+    "$$ W_B = W_o \\cdot exp \\left [ \\frac{- W_o \\cdot (t_B - t_I)}{I} \\right ]$$\n",
     "\n",
     "$$M_B = I \\cdot \\frac{W_B}{W_o} $$\n",
     "\n",
@@ -1120,7 +1120,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Alt text](image.png)"
+    "#### Ejemplo 12.6\n",
+    "\n",
+    "Desarrolle el conteo de partes para la fase de vapor de la siguiente sección.\n",
+    "\n",
+    "<img src=\"Tabla11.png\" style=\"width: 900px; height: 500px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
+    "#### Solución\n",
+    "\n",
+    "Según Spouge y Funnemark (2006), la frecuencia de fuga para un elemento con diámetro D desde un diámetro de agujero mayor que d se puede calcular según la expresión:\n",
+    "\n",
+    "$$ f(d) = C \\cdot  (1 + a\\cdot D^n ) \\cdot d^m + F_{rup}$$\n",
+    "\n",
+    "con:\n",
+    "\n",
+    "- f, frecuencia de fugas (por año o por metro año solo para tuberías) que superan el tamaño d.\n",
+    "- C y m, constantes que representan la distribución del tamaño del agujero.\n",
+    "- a y n, constantes que representan la dependencia del tamaño del equipo.\n",
+    "- D, diámetro del elemento en milímetros.\n",
+    "- d, diámetro del agujero, en mm (asumiendo como >= 10 mm).\n",
+    "\n",
+    "#### Frecuencia total de fugas para tuberías de 8\" (200 mm, 55 m).\n",
+    "\n",
+    "<img src=\"Tabla12.png\" style=\"width: 900px; height: 100px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
+    "$$f \\cdot L = [ C \\cdot (1 + a \\cdot D^n ) \\cdot d^m + F_{rup} ] \\cdot L$$\n",
+    "\n",
+    "$$f \\cdot L = [3.7 E - 05 \\cdot (1+1000 \\cdot 200^{-1.5}) \\cdot 10^{-0.74} + 3.0E - 06] \\cdot (20 + 35) = 6.66E - 04y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas para tuberías de 10\" (250 mm, 5 m).\n",
+    "\n",
+    "$$f \\cdot L = [ C \\cdot (1 + a \\cdot D^n ) \\cdot d^m + F_{rup} ] \\cdot L$$\n",
+    "\n",
+    "$$f \\cdot L = [3.7 E - 05 \\cdot (1+1000 \\cdot 250^{-1.5}) \\cdot 10^{-0.74} + 3.0E - 06] \\cdot 5 = 5.72E - 05y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas para bridas de 8\".\n",
+    "\n",
+    "<img src=\"Tabla13.png\" style=\"width: 900px; height: 100px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
+    "$$f  = [ C \\cdot (1 + a \\cdot D^n ) \\cdot d^m + F_{rup} ] $$\n",
+    "\n",
+    "$$f = [7.5 E - 05 \\cdot (1+ 1.9E - 04 \\cdot 200^{1.5}) \\cdot 10^{-0.84} + 5.0E - 06] = 2.4E - 05y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas para bridas de 10\".\n",
+    "\n",
+    "$$f  = [ C \\cdot (1 + a \\cdot D^n ) \\cdot d^m + F_{rup} ] $$\n",
+    "\n",
+    "$$f  = [7.5 E - 05 \\cdot (1+ 1.9E - 04 \\cdot 250^{1.5}) \\cdot 10^{-0.84} + 5.0E - 06] = 2.69E - 05y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas para valvulas de mano de 8\".\n",
+    "\n",
+    "<img src=\"Tabla14.png\" style=\"width: 900px; height: 100px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
+    "$$ f = [ C \\cdot (1 + a \\cdot D^n ) \\cdot d^m + F_{rup}]$$\n",
+    "\n",
+    "$$f  = [7.0 E - 05 \\cdot (1+ 3.4E - 05 \\cdot 200^{2.0}) \\cdot 10^{-0.76} + 1.0E - 05] = 1.88E - 04y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas para valvulas de mano de 10\".\n",
+    "\n",
+    "$$ f = [ C \\cdot (1 + a \\cdot D^n ) \\cdot d^m + F_{rup}]$$\n",
+    "\n",
+    "$$f  = [7.0 E - 05 \\cdot (1+ 3.4E - 05 \\cdot 250^{2.0}) \\cdot 10^{-0.76} + 1.0E - 05] = 2.81E - 04y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas para valvulas de aislamiento de 8\".\n",
+    "\n",
+    "<img src=\"Tabla15.png\" style=\"width: 900px; height: 100px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
+    "$$ f = [ C \\cdot (1 + a \\cdot D^n ) \\cdot d^m + F_{rup}] = [6.9 - 05 \\cdot (1) \\cdot 10^{-0.82}] = 1.04E - 04y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas para valvulas de aislamiento de 10\".\n",
+    "\n",
+    "$$ f = [ C \\cdot (1 + a \\cdot D^n ) \\cdot d^m + F_{rup}] = [6.9 - 05 \\cdot (1) \\cdot 10^{-0.82}] = 1.04E - 04y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas de accesorios (50\" agujero).\n",
+    "\n",
+    "$$ f = [ C \\cdot d^m + F_{rup}] = [6.1 - 04 \\cdot 50^{-0.80} + 0] = 2.67E - 05y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas del tambor de destilación instantánea (agujero de 50 mm).\n",
+    "\n",
+    "$$ f = [ C \\cdot d^m + F_{rup}] = [1.8 - 03 \\cdot 50^{-0.43} + 0.0001] = 4.3E - 0y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas del intercambiador de calor (agujero de 50 mm).\n",
+    "\n",
+    "$$ f = [ C \\cdot d^m + F_{rup}] = [4.7 - 03 \\cdot 50^{-0.65} + 0] = 3.7E - 04y^{-1}$$\n",
+    "\n",
+    "#### Frecuencia total de fugas del filtro (agujero de 50 mm).\n",
+    "\n",
+    "$$ f = [ C \\cdot d^m + F_{rup}] = [3.7 - 03 \\cdot 50^{-0.66} + 0] = 2.8E - 04y^{-1}$$\n",
+    "\n",
+    "<img src=\"Tabla16.png\" style=\"width: 900px; height: 500px; display: block; margin: 0 auto; text-align: center;\">"
    ]
   }
  ],
