--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -843,7 +843,7 @@
     "El sulfuro de hidrógeno se libera de las dos unidades siguientes a la frecuencia dada, y\n",
     "las nubes de gas llegan a las zonas ocupadas por las personas identificadas. Calcular los índices de riesgo.\n",
     "\n",
-    "<img src=\"Tabla1.png\" style=\"width: 700px; height: 200px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla1.png?raw=true\" style=\"width: 700px; height: 200px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
     "Ecuación Probit para el sulfuro de hidrógeno (ppm, min) (Van den Bosch, Duijm, Yellow Book, 2005):\n",
     "\n",
@@ -854,8 +854,8 @@
     "- $Pr2A = -10.833752 + ln(1100 ^{1.9} * 6) = 4.2$     (12.13)\n",
     "- $Pr2B = -10.833752 + ln(1400 ^{1.9} * 9) = 5.1$     (12.14)\n",
     "\n",
-    "<img src=\"Tabla2.png\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
-    "<img src=\"Tabla3.png\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla2.png?raw=true\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla3.png?raw=true\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
     "\n",
     "- $LSIR_1 = 3.1 * 10^{-5} +2.2 * 10^{-5}= 5.3 \\times 10^{-5} y^{-1}$ (12.15)\n",
@@ -902,7 +902,7 @@
    "source": [
     "#### Ejemplo 3\n",
     "\n",
-    "<img src=\"Tabla4.png\" style=\"width: 700px; height: 550px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla4.png?raw=true\" style=\"width: 700px; height: 550px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
     "**Laa Tabla 12.3** incluye 10 escenarios de incidentes relacionados con un número de fatalidades ocurridas a la frecuencia dada \\(f\\). Construye la curva FN.\n",
     "\n",
@@ -912,13 +912,13 @@
     "\n",
     "La curva FN se ha representado en la **Figura 12.4**.\n",
     "\n",
-    "<img src=\"Tabla5.png\" style=\"width: 600px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla5.png?raw=true\" style=\"width: 600px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
     "**La Autoridad de Salud y Ejecutiva del Reino Unido, con referencia específica al riesgo social, ha propuesto la siguiente partición para las tres zonas del modelo ALARP (Figura 12.5).**\n",
     "\n",
     "Se concluye que el escenario incluido en este ejemplo no cumple con los límites ALARP del HSE del Reino Unido para el riesgo social, como se destaca en la zona naranja, donde la curva FN supera la banda ALARP (Figura 12.6).\n",
     "\n",
-    "<img src=\"Tabla6.png\" style=\"width: 550px; height: 800px; display: block; margin: 0 auto; text-align: center;\">"
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla6.png?raw=true\" style=\"width: 550px; height: 800px; display: block; margin: 0 auto; text-align: center;\">"
    ]
   },
   {
@@ -1007,11 +1007,11 @@
     "\n",
     "Este es un ejemplo. Es importante señalar que las reglas financieras deben ser establecidas por la política corporativa. El modelo ALARP también se aplica en la ejecución de estudios de seguridad y para el diseño aceptable de plantas y edificios. En estos casos, se pueden utilizar métodos semicuantitativos, como las matrices ALARP, para establecer el nivel de cumplimiento y verificar si es necesario adoptar un enfoque más seguro. Un ejemplo típico se encuentra en la norma BS EN 1473:2016, donde se relacionan consecuencias y frecuencias, y se identifican las tres bandas del modelo ALARP para seguridad, medio ambiente y activos (Tablas 12.5-12.9).\n",
     "\n",
-    "<img src=\"Tabla7.png\" style=\"width: 500px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla7.png?raw=true\" style=\"width: 500px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
-    "<img src=\"Tabla8.png\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla8.png?raw=true\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
-    "<img src=\"Tabla9.png\" style=\"width: 700px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla9.png?raw=true\" style=\"width: 700px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n"
    ]
   },
@@ -1115,7 +1115,6 @@
     "4. Se suman las frecuencias de los elementos del mismo tamaño.\n",
     "5. Se desarrollan frecuencias acumulativas de fugas para respaldar los escenarios de incidentes específicos, como incendio en piscina, incendio en chorro, incendio repentino, explosión y nube tóxica."
    ]
-<<<<<<< HEAD
   },
   {
    "cell_type": "markdown",
@@ -1211,8 +1210,13 @@
     "\n",
     "<img src=\"Tabla16.png\" style=\"width: 900px; height: 500px; display: block; margin: 0 auto; text-align: center;\">"
    ]
-=======
->>>>>>> 81f7cc028ea07959554ececd647dbaf4b1a0ee71
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "vrdsdfavd"
+   ]
   }
  ],
  "metadata": {
