--- a/resumen.ipynb
+++ b/resumen.ipynb
@@ -11,48 +11,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Postura Crítica: La Generación de Energía Térmica en Colombia a Mediano y Largo Plazo**\n",
+    "**Postura Crítica: Generación de Energía Térmica en Colombia en el Mediano y Largo Plazo**\n",
     "\n",
-    "**Introducción**\n",
+    "**Introducción**: \n",
+    "Colombia, al igual que muchos países, enfrenta el desafío de diversificar su matriz energética y avanzar hacia la sostenibilidad. Aunque la energía térmica ha sido un pilar en la generación de electricidad, hay argumentos cada vez más sólidos que indican que es necesario reconsiderar su papel en el futuro energético del país.\n",
     "\n",
-    "La generación de energía térmica en Colombia, basada en la quema de combustibles fósiles, ha sido una práctica común durante décadas. Sin embargo, a medida que el mundo enfrenta una crisis climática cada vez más grave, es crucial examinar críticamente la sostenibilidad y las implicaciones a largo plazo de continuar dependiendo de esta fuente de energía.\n",
+    "**1. Contexto de Cambio Climático**:\n",
+    "El Quinto Informe de Evaluación del IPCC (2014) establece de manera concluyente la necesidad de reducir las emisiones de gases de efecto invernadero. La generación de energía térmica, especialmente cuando se basa en carbón y otros combustibles fósiles, es una fuente significativa de estas emisiones. Mantener o expandir la capacidad térmica en Colombia iría en contra de los esfuerzos globales y nacionales para combatir el cambio climático.\n",
     "\n",
-    "**1. Impactos Ambientales**\n",
+    "**2. Recursos Naturales y Biodiversidad**:\n",
+    "Colombia es uno de los países más biodiversos del mundo. La extracción de carbón y otros combustibles fósiles ha demostrado tener impactos negativos en ecosistemas esenciales, afectando la biodiversidad y los servicios ecosistémicos.\n",
     "\n",
-    "Uno de los principales problemas de la generación de energía térmica es su contribución significativa a la emisión de gases de efecto invernadero. Colombia, al igual que otros países, se ha comprometido a reducir sus emisiones de carbono. La generación térmica socava estos esfuerzos y agrava el cambio climático. Esta postura crítica se basa en la premisa de que la generación térmica no es sostenible desde una perspectiva ambiental.\n",
+    "<img src=\"impacto_carbon.png\" style=\"width: 500px; height: 800px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
-    "- *Desafíos Climáticos*: El libro señala que el cambio climático está afectando a Colombia y que es fundamental abordar este problema. Continuar dependiendo de la generación térmica agrava el cambio climático, lo que resulta en fenómenos climáticos extremos como inundaciones, sequías y olas de calor.\n",
+    "La extracción de carbón y otros combustibles fósiles ha demostrado tener impactos negativos en ecosistemas esenciales, afectando la biodiversidad y los servicios ecosistémicos. En particular, la minería, mediante la remoción de cimas de montañas y técnicas de extracción tanto de superficie como subterráneas, ha llevado a la destrucción de bosques, ríos y esteros. Esta degradación ambiental daña directamente a comunidades y a la vida silvestre.\n",
     "\n",
-    "- *Amenazas para la Biodiversidad*: La quema de combustibles fósiles también tiene un impacto negativo en la biodiversidad, lo que es especialmente preocupante en un país con una biodiversidad tan rica como Colombia.\n",
+    "Además, las etapas de elaboración y procesamiento, como el lavado de carbón, consumen grandes cantidades de agua dulce, un recurso esencial para la vida y para muchas actividades humanas. Los procesos asociados a la minería y la combustión liberan metales pesados y otros tóxicos al agua, poniendo en riesgo la salud de las comunidades y aumentando las tasas de enfermedades como el cáncer, malformaciones congénitas y daños neurológicos. La liberación de aguas calientes durante la combustión también tiene graves consecuencias para la vida acuática.\n",
     "\n",
-    "- *Contaminación del Aire y Salud Humana*: La quema de combustibles fósiles también emite contaminantes atmosféricos que pueden tener graves efectos en la salud humana. La exposición a partículas finas y otros contaminantes puede causar problemas respiratorios y cardiovasculares. Además, la contaminación del aire afecta negativamente la calidad de vida y la salud de las personas en Colombia.\n",
+    "**3. Dependencia de Combustibles Importados**:\n",
+    "La dependencia de combustibles importados para la generación térmica no solo tiene implicaciones económicas, sino que también compromete la seguridad energética del país. Frente a fluctuaciones en los precios globales y la geopolítica, la dependencia de importaciones puede ser arriesgada.\n",
     "\n",
-    "**2. Viabilidad Económica**\n",
+    "**4. Transición Energética y Oportunidades**:\n",
+    "El libro \"Energías renovables no convencionales y cambio climático: un análisis para Colombia\" resalta el vasto potencial de Colombia en energías renovables no convencionales. Invertir en estas fuentes, como solar, eólica y biomasa, no solo ayudaría a mitigar el cambio climático, sino que también podría posicionar a Colombia como líder en la región en términos de innovación y desarrollo sostenible.\n",
     "\n",
-    "La generación de energía térmica suele requerir inversiones significativas en infraestructura y combustibles fósiles. Sin embargo, los costos asociados a largo plazo de esta fuente de energía son motivo de preocupación.\n",
+    "**5. Marco Legal y Compromisos Internacionales**:\n",
+    "El Acuerdo de París y otros instrumentos internacionales exigen una reducción en las emisiones de gases de efecto invernadero. Expandir la energía térmica comprometería la capacidad de Colombia para cumplir con estos acuerdos, lo que podría tener consecuencias políticas y económicas.\n",
     "\n",
-    "- *Precio de los Combustibles Fósiles*: Los precios de los combustibles fósiles son volátiles y están sujetos a fluctuaciones en los mercados internacionales. Dependiendo de la generación térmica a largo plazo podría exponer a Colombia a riesgos económicos considerables.\n",
+    "**6. Justicia Social y Energía**:\n",
+    "La generación térmica ha sido vinculada a desplazamientos forzados, conflictos y otros problemas sociales en Colombia. A medida que la sociedad colombiana busca formas más inclusivas y justas de desarrollo, la energía térmica puede no alinearse con estos objetivos.\n",
     "\n",
-    "- *Desafíos Financieros*: Las inversiones continuas en infraestructura de generación térmica pueden comprometer el presupuesto gubernamental y reducir los recursos disponibles para otras necesidades críticas.\n",
-    "\n",
-    "**3. Oportunidades de Energías Renovables**\n",
-    "\n",
-    "El libro proporciona evidencia de que las energías renovables no convencionales son una alternativa viable para Colombia. Estas fuentes de energía, como la solar, eólica y biomasa, presentan ventajas significativas.\n",
-    "\n",
-    "- *Sostenibilidad Ambiental*: Las energías renovables emiten menos gases de efecto invernadero y, en muchos casos, ninguno. Esto alinea la producción de energía con los objetivos de reducción de emisiones de Colombia y su compromiso con el Acuerdo de París.\n",
-    "\n",
-    "- *Energía Abundante*: Colombia tiene un gran potencial para la generación de energía a partir de fuentes renovables. La abundancia de luz solar, vientos y biomasa hace que sea un país ideal para la transición hacia estas fuentes.\n",
-    "\n",
-    "- *Inversión y Empleo*: La transición hacia energías renovables puede impulsar la economía a través de la inversión en nuevas tecnologías y la creación de empleos en el sector de energía limpia.\n",
-    "\n",
-    "**4. Políticas y Regulaciones**\n",
-    "\n",
-    "Para lograr una transición exitosa hacia fuentes de energía más sostenibles en Colombia, se requieren políticas y regulaciones adecuadas. Esto podría incluir la eliminación gradual de subsidios a los combustibles fósiles, la promoción de inversiones en energías renovables, y la implementación de incentivos fiscales para proyectos de energía limpia.\n",
-    "\n",
-    "**Conclusión**\n",
-    "\n",
-    "En resumen, la generación de energía térmica en Colombia plantea graves desafíos en términos de impactos ambientales, viabilidad económica y oportunidades no aprovechadas. La transición hacia las energías renovables no convencionales es una opción más sostenible y prometedora para el país. Colombia debe considerar seriamente la diversificación de su matriz energética y la reducción de su dependencia de los combustibles fósiles, y así contribuir a la lucha global contra el cambio climático y promover un futuro más sostenible."
+    "**Conclusión**:\n",
+    "Si bien la energía térmica ha desempeñado un papel crucial en el pasado energético de Colombia, su papel en el mediano y largo plazo debe ser reconsiderado. Los desafíos del cambio climático, la protección de la biodiversidad, la seguridad energética, las oportunidades de las energías renovables y las obligaciones legales internacionales son factores cruciales que hacen que la continuación o expansión de la generación térmica sea cuestionable. Es esencial que Colombia busque alternativas sostenibles, tanto desde una perspectiva ambiental como socioeconómica."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
