--- a/Parcial Termodinámica Nicolás Botero Díaz final.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,6 +1209,36 @@
     "$$ f = [ C \\cdot d^m + F_{rup}] = [3.7 - 03 \\cdot 50^{-0.66} + 0] = 2.8E - 04y^{-1}$$\n",
     "\n",
     "<img src=\"Tabla16.png\" style=\"width: 900px; height: 500px; display: block; margin: 0 auto; text-align: center;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3) Postura Crítica sobre la Generación de Energía Térmica en Colombia\n",
+    "\n",
+    "$\\textbf{Contexto Energético Colombiano:}$\n",
+    "\n",
+    " Colombia, siendo un país tropical con vastos recursos hídricos, ha dependido históricamente de la hidroelectricidad como principal fuente de energía. Sin embargo, la generación térmica ha desempeñado un papel crucial como respaldo durante períodos de sequía o insuficiencia hídrica.\n",
+    "\n",
+    "$\\textbf{Limitaciones de la Energía Térmica:}$\n",
+    "\n",
+    "- $\\textbf{Impacto Ambiental:}$ La generación térmica, especialmente aquella basada en combustibles fósiles como el carbón y el petróleo, tiene un impacto ambiental significativo. Contribuye al aumento de las emisiones de CO2, acelerando el cambio climático.\n",
+    "\n",
+    "- $\\textbf{Volatilidad de Precios:}$ La dependencia de combustibles importados puede llevar a volatilidades en el precio de la energía, afectando la economía nacional.\n",
+    "\n",
+    "- $\\textbf{Agotamiento de Recursos:}$ Los combustibles fósiles son finitos. A largo plazo, depender de ellos no es sostenible.\n",
+    "\n",
+    "$\\textbf{Energías Renovables como Alternativa:}$\n",
+    "\n",
+    "Colombia tiene un gran potencial en energías renovables no convencionales, como solar y eólica. Estas fuentes, además de ser sostenibles, pueden diversificar la matriz energética y reducir la dependencia de fuentes térmicas.\n",
+    "\n",
+    "$\\textbf{Transición Energética:}$\n",
+    "\n",
+    "A mediano y largo plazo, es esencial que Colombia avance en una transición energética que priorice las fuentes limpias y renovables. Esto no solo ayudará a combatir el cambio climático, sino que también generará empleo y fomentará la innovación.\n",
+    "\n",
+    "$\\textbf{Conclusion:}$\n",
+    "Mientras que la energía térmica ha sido esencial para garantizar la estabilidad energética en Colombia, es imperativo mirar hacia el futuro y reconocer la necesidad de diversificar y adoptar fuentes más limpias y sostenibles. La riqueza natural de Colombia ofrece una oportunidad única para liderar en la región en cuanto a energías renovables."
    ]
   }
  ],
