--- a/Parcial Termodinámica Nicolás Botero Díaz final.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz final.ipynb
@@ -1229,6 +1229,12 @@
     "\n",
     "- $\\textbf{Agotamiento de Recursos:}$ Los combustibles fósiles son finitos. A largo plazo, depender de ellos no es sostenible.\n",
     "\n",
+    "<img src=\"Paises consumidores de carbón.jpg\" style=\"width: 700px; height: 500px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
+    "En la imagen se pueden apreciar los paises que atraves del teimpo han empleado más carbón en el periodo comprendido entre 1980 y 2012. En comparación a esta, en la que China es uno de los paises que más emplea carbón, se observa en la siguiente imagen un cambio significativo en el consumo de carbón y el compromiso con el medio ambiente hacia un país con una producción energética más amigable con el medio ambiente. \n",
+    "\n",
+    "<img src=\"Paises apoyo.jpg\" style=\"width: 600px; height: 600px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
     "$\\textbf{Energías Renovables como Alternativa:}$\n",
     "\n",
     "Colombia tiene un gran potencial en energías renovables no convencionales, como solar y eólica. Estas fuentes, además de ser sostenibles, pueden diversificar la matriz energética y reducir la dependencia de fuentes térmicas.\n",
@@ -1238,7 +1244,15 @@
     "A mediano y largo plazo, es esencial que Colombia avance en una transición energética que priorice las fuentes limpias y renovables. Esto no solo ayudará a combatir el cambio climático, sino que también generará empleo y fomentará la innovación.\n",
     "\n",
     "$\\textbf{Conclusion:}$\n",
-    "Mientras que la energía térmica ha sido esencial para garantizar la estabilidad energética en Colombia, es imperativo mirar hacia el futuro y reconocer la necesidad de diversificar y adoptar fuentes más limpias y sostenibles. La riqueza natural de Colombia ofrece una oportunidad única para liderar en la región en cuanto a energías renovables."
+    "Mientras que la energía térmica ha sido esencial para garantizar la estabilidad energética en Colombia, es imperativo mirar hacia el futuro y reconocer la necesidad de diversificar y adoptar fuentes más limpias y sostenibles. La riqueza natural de Colombia ofrece una oportunidad única para liderar en la región en cuanto a energías renovables.\n",
+    "\n",
+    "Tambíen, en la siguiente gráfica, se aprecia la transición del empleo de diferentes fuentes como generación de energía.\n",
+    "\n",
+    "<img src=\"Transición bajo carbón.jpg\" style=\"width: 800px; height: 600px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
+    "En esta se muestra el compromiso de Colombia en la creación de proyectos que impulsan la generación y empleo de energías renovables.\n",
+    "\n",
+    "<img src=\"proyectos.jpg\" style=\"width: 800px; height: 600px; display: block; margin: 0 auto; text-align: center;\">"
    ]
   }
  ],
