--- a/resumen.ipynb
+++ b/resumen.ipynb
@@ -34,6 +34,8 @@
     "**4. Transición Energética y Oportunidades**:\n",
     "El libro \"Energías renovables no convencionales y cambio climático: un análisis para Colombia\" resalta el vasto potencial de Colombia en energías renovables no convencionales. Invertir en estas fuentes, como solar, eólica y biomasa, no solo ayudaría a mitigar el cambio climático, sino que también podría posicionar a Colombia como líder en la región en términos de innovación y desarrollo sostenible.\n",
     "\n",
+    "<img src=\"proyectos.jpeg\" style=\"width: 650px; height: 500px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "\n",
     "**5. Marco Legal y Compromisos Internacionales**:\n",
     "El Acuerdo de París y otros instrumentos internacionales exigen una reducción en las emisiones de gases de efecto invernadero. Expandir la energía térmica comprometería la capacidad de Colombia para cumplir con estos acuerdos, lo que podría tener consecuencias políticas y económicas.\n",
     "\n",
