--- a/Parcial Termodinámica Nicolás Botero Díaz final.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz final.ipynb
@@ -1252,7 +1252,7 @@
     "\n",
     "En esta se muestra el compromiso de Colombia en la creación de proyectos que impulsan la generación y empleo de energías renovables.\n",
     "\n",
-    "<img src=\"proyectos.jpg\" style=\"width: 800px; height: 600px; display: block; margin: 0 auto; text-align: center;\">"
+    "<img src=\"proyectos.jpg\" style=\"width: 800px; height: 600px; display: block; margin: 0 auto; text-align: center;\">\n"
    ]
   }
  ],
