Yo tengo pipi chiquito

--- a/Parcial Termodinámica Nicolás Botero Díaz final.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz final.ipynb
@@ -1215,6 +1215,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 2.2)\n",
+    "\n",
+    "Las plantas químicas y energéticas están sujetas a varios riesgos de origen termodinámico debido a las transformaciones de energía y materia que ocurren en sus procesos. Estos riesgos pueden ser el resultado de reacciones exotérmicas no controladas, cambios de fase, transferencia de calor y otras interacciones termodinámicas. A continuación, se enumeran algunos de los riesgos termodinámicos más comunes y sus posibles mitigaciones:\n",
+    "\n",
+    "1. *$\\textbf{Reacciones Exotérmicas No Controladas:}$* Muchas reacciones químicas liberan calor. Si esta liberación de calor no se controla, puede provocar un aumento de temperatura que a su vez puede acelerar la reacción, creando un ciclo de retroalimentación positiva que puede resultar en una explosión.\n",
+    "\n",
+    "   - *Mitigación:* Uso de sistemas de control de temperatura, como sistemas de refrigeración o intercambiadores de calor. También se pueden usar inhibidores de reacción o diluyentes para reducir la velocidad de la reacción.\n",
+    "\n",
+    "2. *$\\textbf{Expansión o Compresión Rápida de Gases:}$* Los cambios rápidos en la presión pueden causar explosiones o daños en los equipos.\n",
+    "\n",
+    "   - *Mitigación*: Uso de válvulas de alivio de presión y sistemas de ventilación adecuados. Diseño de equipos para soportar las presiones máximas esperadas.\n",
+    "\n",
+    "3. *$\\textbf{Autoignición:}$* Algunos materiales pueden encenderse espontáneamente a temperaturas elevadas sin una fuente de ignición externa.\n",
+    "\n",
+    "   - *Mitigación*: Almacenar y procesar materiales en condiciones donde la temperatura se mantenga por debajo de su temperatura de autoignición.\n",
+    "\n",
+    "4. $\\textbf{Transferencia de Calor No Controlada:}$ Un calentamiento o enfriamiento no controlado puede llevar a condiciones inseguras o a la falla del equipo.\n",
+    "\n",
+    "   - *Mitigación*: Monitorización y control adecuado de la temperatura. Uso de aislamiento térmico donde sea necesario.\n",
+    "\n",
+    "5. $\\textbf{Cambios de Fase No Deseados:}$ La transformación inesperada de un material de líquido a gas (o viceversa) puede resultar en sobrepresiones o vacíos no deseados.\n",
+    "\n",
+    "   - *Mitigación*: Monitorización y control de las condiciones de proceso para evitar cambios de fase no deseados. Uso de dispositivos de alivio de presión.\n",
+    "\n",
+    "6. $\\textbf{Fugas de Materiales a Temperaturas Extremas:}$ Las fugas de materiales calientes o criogénicos pueden causar quemaduras o lesiones por congelación, y también pueden resultar en incendios o explosiones.\n",
+    "\n",
+    "   - *Mitigación*: Diseño adecuado de sellos y juntas. Uso de sistemas de detección de fugas y sistemas automáticos de cierre.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 3) Postura Crítica sobre la Generación de Energía Térmica en Colombia\n",
     "\n",
     "$\\textbf{Contexto Energético Colombiano:}$\n",
